# anedya-camera-livestream-example

./: README.md
peer/public/: index.html
peer_app/lib/: peer_cam_screen.dart  qr_code_scanner.dart
streamer/: .env.example  camera.py  camera_streamer.py  config.py  main.py  pyproject.toml  recording.py  tracks.py
