[project]
name = "streamer"
version = "0.1.0"
description = "Pi camera WebRTC streamer with Anedya MQTT signaling and rolling local recording."
requires-python = ">=3.11"
dependencies = [
    "aiortc",
    "av",
    "imageio-ffmpeg>=0.6.0; platform_system == 'Windows'",
    "linuxpy>=0.24.0; platform_system == 'Linux'",
    "numpy",
    "opencv-python",
    "paho-mqtt",
    "qrcode",
    "sounddevice",
]

[project.scripts]
streamer = "main:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "camera", "camera_streamer", "config", "recording", "tracks"]

[dependency-groups]
dev = [
    "pygrabber>=0.2",
]
